# kdnssd

./: .gitignore  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5DNSSDConfig.cmake.in  KF6DNSSDConfig.cmake.in  README.md  kdnssd-framework.yaml  metainfo.yaml
cmake/: FindAvahi.cmake  FindDNSSD.cmake
examples/: CMakeLists.txt  browser.cpp
po/af/: kdnssd5_qt.po
po/af/scripts/: kdnssd5_qt.po
po/ar/: kdnssd5_qt.po
po/as/: kdnssd5_qt.po
po/ast/: kdnssd5_qt.po
po/az/: kdnssd5_qt.po
po/be/: kdnssd5_qt.po
po/be/scripts/: kdnssd5_qt.po
po/be@latin/: kdnssd5_qt.po
po/bg/: kdnssd5_qt.po
po/bg/scripts/: kdnssd5_qt.po
po/bn/: kdnssd5_qt.po
po/bn_IN/: kdnssd5_qt.po
po/bn_IN/scripts/: kdnssd5_qt.po
po/br/: kdnssd5_qt.po
po/bs/: kdnssd5_qt.po
po/ca/: kdnssd5_qt.po
po/ca@valencia/: kdnssd5_qt.po
po/crh/: kdnssd5_qt.po
po/cs/: kdnssd5_qt.po
po/csb/: kdnssd5_qt.po
po/cy/: kdnssd5_qt.po
po/da/: kdnssd5_qt.po
po/de/: kdnssd5_qt.po
po/el/: kdnssd5_qt.po
po/en_GB/: kdnssd5_qt.po
po/en_GB/scripts/: kdnssd5_qt.po
po/eo/: kdnssd5_qt.po
po/eo/scripts/: kdnssd5_qt.po
po/es/: kdnssd5_qt.po
po/et/: kdnssd5_qt.po
po/eu/: kdnssd5_qt.po
po/fa/: kdnssd5_qt.po
po/fi/: kdnssd5_qt.po
po/fi/scripts/: kdnssd5_qt.po
po/fr/: kdnssd5_qt.po
po/fy/: kdnssd5_qt.po
po/ga/: kdnssd5_qt.po
po/gd/: kdnssd5_qt.po
po/gl/: kdnssd5_qt.po
po/gu/: kdnssd5_qt.po
po/ha/: kdnssd5_qt.po
po/he/: kdnssd5_qt.po
po/hi/: kdnssd5_qt.po
po/hne/: kdnssd5_qt.po
po/hr/: kdnssd5_qt.po
po/hsb/: kdnssd5_qt.po
po/hu/: kdnssd5_qt.po
po/hy/: kdnssd5_qt.po
po/ia/: kdnssd5_qt.po
po/id/: kdnssd5_qt.po
po/is/: kdnssd5_qt.po
po/it/: kdnssd5_qt.po
po/it/scripts/: kdnssd5_qt.po
po/ja/: kdnssd5_qt.po
po/ja/scripts/: kdnssd5_qt.po
po/ka/: kdnssd5_qt.po
po/kk/: kdnssd5_qt.po
po/km/: kdnssd5_qt.po
po/km/scripts/: kdnssd5_qt.po
po/kn/: kdnssd5_qt.po
po/ko/: kdnssd5_qt.po
po/ku/: kdnssd5_qt.po
po/ku/scripts/: kdnssd5_qt.po
po/lb/: kdnssd5_qt.po
po/lt/: kdnssd5_qt.po
po/lv/: kdnssd5_qt.po
po/mai/: kdnssd5_qt.po
po/mk/: kdnssd5_qt.po
po/ml/: kdnssd5_qt.po
po/mr/: kdnssd5_qt.po
po/mr/scripts/: kdnssd5_qt.po
po/ms/: kdnssd5_qt.po
po/nb/: kdnssd5_qt.po
po/nds/: kdnssd5_qt.po
po/ne/: kdnssd5_qt.po
po/nl/: kdnssd5_qt.po
po/nn/: kdnssd5_qt.po
po/oc/: kdnssd5_qt.po
po/or/: kdnssd5_qt.po
po/or/scripts/: kdnssd5_qt.po
po/pa/: kdnssd5_qt.po
po/pa/scripts/: kdnssd5_qt.po
po/pl/: kdnssd5_qt.po
po/ps/: kdnssd5_qt.po
po/pt/: kdnssd5_qt.po
po/pt_BR/: kdnssd5_qt.po
po/ro/: kdnssd5_qt.po
po/ro/scripts/: kdnssd5_qt.po
po/ru/: kdnssd5_qt.po
po/se/: kdnssd5_qt.po
po/si/: kdnssd5_qt.po
po/sk/: kdnssd5_qt.po
po/sl/: kdnssd5_qt.po
po/sq/: kdnssd5_qt.po
po/sq/scripts/: kdnssd5_qt.po
po/sr/: kdnssd5_qt.po
po/sr@ijekavian/: kdnssd5_qt.po
po/sr@ijekavianlatin/: kdnssd5_qt.po
po/sr@latin/: kdnssd5_qt.po
po/sr@latin/scripts/: kdnssd5_qt.po
po/sv/: kdnssd5_qt.po
po/ta/: kdnssd5_qt.po
po/te/: kdnssd5_qt.po
po/te/scripts/: kdnssd5_qt.po
po/tg/: kdnssd5_qt.po
po/th/: kdnssd5_qt.po
po/tr/: kdnssd5_qt.po
po/tt/: kdnssd5_qt.po
po/ug/: kdnssd5_qt.po
po/uk/: kdnssd5_qt.po
po/uk/scripts/: kdnssd5_qt.po
po/uz/: kdnssd5_qt.po
po/uz@cyrillic/: kdnssd5_qt.po
po/vi/: kdnssd5_qt.po
po/wa/: kdnssd5_qt.po
po/wa/scripts/: kdnssd5_qt.po
po/x-test/: kdnssd5_qt.po
po/xh/: kdnssd5_qt.po
po/zh_CN/: kdnssd5_qt.po
po/zh_CN/scripts/: kdnssd5_qt.po
po/zh_HK/: kdnssd5_qt.po
po/zh_TW/: kdnssd5_qt.po
poqm/ast/: kdnssd6_qt.po
poqm/be/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/ca/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/ca@valencia/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/de/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/el/: kdnssd6_qt.po
poqm/eo/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/es/: kdnssd6_qt.po
poqm/fa/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/fi/: kdnssd5_qt.po
poqm/ga/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/gu/: kdnssd6_qt.po
poqm/he/: kdnssd6_qt.po
poqm/ia/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/ja/: kdnssd6_qt.po
poqm/lv/: kdnssd5_qt.po
poqm/nb/: kdnssd5_qt.po
poqm/nn/: kdnssd6_qt.po
poqm/pl/: kdnssd5_qt.po
poqm/ro/: kdnssd6_qt.po
poqm/sa/: kdnssd6_qt.po
poqm/se/: kdnssd5_qt.po  kdnssd6_qt.po
poqm/sq/: kdnssd5_qt.po
poqm/ug/: kdnssd6_qt.po
poqm/x-test/: kdnssd5_qt.po
poqm/zh_CN/: kdnssd5_qt.po  kdnssd6_qt.po
src/: CMakeLists.txt  Messages.sh  avahi-domainbrowser.cpp  avahi-domainbrowser_p.h  avahi-publicservice.cpp  avahi-publicservice_p.h  avahi-remoteservice.cpp  avahi-remoteservice_p.h  avahi-servicebrowser.cpp  avahi-servicebrowser_p.h  avahi-servicetypebrowser.cpp  avahi-servicetypebrowser_p.h  avahi_entrygroup_interface.cpp  avahi_entrygroup_interface.h  avahi_listener.cpp  avahi_listener_p.h  avahi_server_interface.cpp  avahi_server_interface.h  avahi_serviceresolver_interface.cpp  avahi_serviceresolver_interface.h  compatheader.h.in  domainbrowser.h  domainmodel.cpp  domainmodel.h  dummy-domainbrowser.cpp  dummy-publicservice.cpp  dummy-remoteservice.cpp  dummy-servicebrowser.cpp  dummy-servicetypebrowser.cpp  kdnssd-index.qdoc  kdnssd.qdoc  kdnssd.qdocconf  mdnsd-domainbrowser.cpp  mdnsd-domainbrowser_p.h  mdnsd-publicservice.cpp  mdnsd-remoteservice.cpp  mdnsd-responder.cpp  mdnsd-responder.h  mdnsd-sdevent.h  mdnsd-servicebrowser.cpp  (+17 more)
